[gd_scene load_steps=14 format=2]

[ext_resource path="res://scripts/GameInterfaceControl.gd" type="Script" id=1]
[ext_resource path="res://graphics/Interface.png" type="Texture" id=2]
[ext_resource path="res://scripts/BlockManager.gd" type="Script" id=3]
[ext_resource path="res://scripts/CameraMove.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1000, 100000 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4000, 1000 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 25, 71, 21, 18 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 72, 71, 21, 18 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 261, 1, 17, 13 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1, 71, 21, 18 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 48, 20, 18 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 49, 71, 20, 18 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 281, 1, 11, 16 )

[node name="GameInterfaceControl" type="Control"]
anchor_left = -0.5
anchor_top = -0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_bottom = 6.10352e-05
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Zero" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Trigger" type="Area2D" parent="Zero"]

[node name="Collision Left" type="CollisionShape2D" parent="Zero/Trigger"]
position = Vector2( -5000, -97000 )
shape = SubResource( 1 )

[node name="Collision Right" type="CollisionShape2D" parent="Zero/Trigger"]
position = Vector2( 5000, -97000 )
shape = SubResource( 1 )

[node name="Collision Bottom" type="CollisionShape2D" parent="Zero/Trigger"]
position = Vector2( 0, 2000 )
shape = SubResource( 2 )

[node name="Interface" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftSide" type="Control" parent="Interface"]
anchor_top = 1.0
anchor_bottom = 2.0
margin_top = -720.0
margin_bottom = -720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftTurnButton" type="TextureButton" parent="Interface/LeftSide"]
margin_left = 10.0
margin_top = 620.0
margin_right = 31.0
margin_bottom = 638.0
rect_scale = Vector2( 5, 5 )
texture_normal = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause" type="TextureButton" parent="Interface/LeftSide"]
margin_left = 10.0
margin_top = 10.0
margin_right = 31.0
margin_bottom = 28.0
rect_scale = Vector2( 4, 4 )
texture_normal = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Heart1" type="TextureRect" parent="Interface/LeftSide"]
margin_left = 10.0
margin_top = 290.0
margin_right = 27.0001
margin_bottom = 303.0
rect_scale = Vector2( 3, 3 )
texture = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Heart2" type="TextureRect" parent="Interface/LeftSide"]
margin_left = 10.0
margin_top = 340.0
margin_right = 27.0001
margin_bottom = 353.0
rect_scale = Vector2( 3, 3 )
texture = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Heart3" type="TextureRect" parent="Interface/LeftSide"]
margin_left = 10.0
margin_top = 390.0
margin_right = 27.0001
margin_bottom = 403.0
rect_scale = Vector2( 3, 3 )
texture = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightSide" type="Control" parent="Interface"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 2.0
margin_top = -720.0
margin_bottom = -720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightTurnButton" type="TextureButton" parent="Interface/RightSide"]
margin_left = -115.0
margin_top = 620.0
margin_right = -94.0
margin_bottom = 638.0
rect_scale = Vector2( 5, 5 )
texture_normal = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlusButton" type="TextureButton" parent="Interface/RightSide"]
margin_left = -94.0
margin_top = 280.0
margin_right = -73.0
margin_bottom = 298.0
rect_scale = Vector2( 4, 4 )
texture_normal = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MinusButton" type="TextureButton" parent="Interface/RightSide"]
margin_left = -94.0
margin_top = 370.0
margin_right = -73.0
margin_bottom = 388.0
rect_scale = Vector2( 4, 4 )
texture_normal = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlockPicture" type="TextureRect" parent="Interface/RightSide"]
margin_left = -75.0
margin_top = 15.0
margin_right = -64.0
margin_bottom = 31.0
rect_scale = Vector2( 4, 4 )
texture = SubResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CountRemainBlock" type="Label" parent="Interface/RightSide"]
margin_left = -185.0
margin_top = 30.0
margin_right = -150.0
margin_bottom = 45.0
rect_scale = Vector2( 3, 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera" type="Camera2D" parent="."]
anchor_mode = 0
current = true
script = ExtResource( 4 )
[connection signal="body_entered" from="Zero/Trigger" to="Zero" method="_on_Trigger_block_entered"]
[connection signal="pressed" from="Interface/LeftSide/LeftTurnButton" to="." method="_on_LeftTurnButton_pressed"]
[connection signal="pressed" from="Interface/LeftSide/Pause" to="." method="_on_Pause_pressed"]
[connection signal="pressed" from="Interface/RightSide/RightTurnButton" to="." method="_on_RightTurnButton_pressed"]
[connection signal="pressed" from="Interface/RightSide/PlusButton" to="Camera" method="_on_ScaleButton_pressed" binds= [ 0.75 ]]
[connection signal="pressed" from="Interface/RightSide/MinusButton" to="Camera" method="_on_ScaleButton_pressed" binds= [ 1.25 ]]
